--- a/Youtube_Rule_Archive.conf
+++ b/Youtube_Rule_Archive.conf
@@ -13,6 +13,9 @@ URL-REGEX,https?:\/\/youtubei.googleapis.com\/youtubei\/.+(ad|log),REJECT
 URL-REGEX,https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adformat,REJECT
 URL-REGEX,https?:\/\/[\w-]+\.googlevideo\.com\/.+&oad,REJECT-TINYGIF
 
+[MITM]
+hostname = %APPEND% *.googlevideo.com, *.youtube.com, youtubei.googleapis.com
+
 [URL Rewrite]
 ctier=[A-Z] citer=A 302
 
