--- a/Youtube_Rule_Archive.conf
+++ b/Youtube_Rule_Archive.conf
@@ -36,7 +36,7 @@ hostname = %APPEND% *.googlevideo.com, *.youtube.com, youtubei.googleapis.com
 # Script
 # 1
 [Script]
-YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
+YouTube-Ad-Blocker = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
 hostname = *.googlevideo.com
 
 # 2
