--- a/BlackMatrix7-Ad-classicYM.conf
+++ b/BlackMatrix7-Ad-classicYM.conf
@@ -1,6 +1,6 @@
 # Shadowrocket: 2022-06-12 17:01:54
 # Reference: https://github.com/blackmatrix7/ios_rule_script
-# DNS: CloudFlare, Google & Cisco`
+# DNS: CloudFlare, Google & Cisco
 [General]
 dns-server = 1.1.1.1,1.0.0.1,8.8.8.8,8.8.4.4,208.67.222.222,208.67.220.220,system
 ipv6 = true
