--- a/DNS.conf
+++ b/DNS.conf
@@ -1,6 +1,7 @@
 [General]
 # Look up: https://kb.adguard.com/en/general/dns-providers | https://dns.iui.im/
 ######## OverSea
+# Result checker: https://dnscheck.tools/
 # DoH
 dns-server = https://dns.google/dns-query,https://cloudflare-dns.com/dns-query,https://doh.opendns.com/dns-query,https://dns.quad9.net/dns-query
 # DoT as Hostnames
