Refine prettier action rules

--- a/.github/workflows/prettier-code.yml
+++ b/.github/workflows/prettier-code.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+      - feature/*
 
 jobs:
   prettier:
@@ -23,3 +24,6 @@ jobs:
         with:
           # This part is also where you can pass other options, for example:
           prettier_options: --write **/*.{js,md}
+          same_commit: true
+          only_changed: true
+          commit_message: "Code Prettified"
