Add youtube archived rules

--- a/Archives/Youtube_Rule_Archive.conf
+++ b/Archives/Youtube_Rule_Archive.conf
@@ -53,3 +53,11 @@ ctier=L ctier=A 302
 # 2
 [URL Rewrite]
 ctier=[A-Z] citer=A 302
+#3
+[URL Rewrite]
+^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier) _ REJECT
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) $1&ctier=A$2 header
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
