--- a/Modules/Ad-BlackMatrix7-classicYM.conf
+++ b/Modules/Ad-BlackMatrix7-classicYM.conf
@@ -5,4 +5,4 @@
 # Based on clash advertising yaml config
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Classical.yaml,REJECT
+RULE-SET,https://raw.githubusercontent.com/RedDragonWebDesign/block-everything/master/block-everything.txt,REJECT
